# log-py

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
src/log_py/: __init__.py  log.py
